<resources>
    <string name="app_name">LogisA2Z</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_username">Please enter a valid Mobile Number</string>
    <string name="empty_password">Please enter a valid Password</string>
    <string name="network_error">Network Error</string>
    <string name="server_error">Server Error</string>
    <string name="error_incorrect_creds">Invalid Phone Number or Password</string>
    <string name="bad_request">Request could not be processed</string>
    <string name="username_placeholder">Registered Mobile Number</string>
    <string name="password_placeholder">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="ok">OK</string>
    <string name="recharge_request">Recharge Request</string>
    <string name="payments">Payments</string>
    <string name="account_balance">Account Balance</string>
    <string name="cards">Cards</string>
    <string name="cards_usage">Cards Usage</string>
    <string name="card_balance">Card Balance</string>
    <string name="latest_transaction">Latest Transactions</string>
    <string name="card_no">Card No.</string>
    <string name="registered_vehicle_no">Registered Vehicle No.</string>
    <string name="amount_to_recharge">Amount to Recharge</string>
    <string name="save">SAVE</string>
    <string name="close">CLOSE</string>
    <string name="failed">Failed</string>
    <string name="pending">Pending</string>
    <string name="add_payment">Add Payment</string>
    <string name="payment_record">Payment Record</string>
    <string name="amount">Amount</string>
    <string name="mode">Mode</string>
    <string name="description">Description</string>
    <string name="description_hint">Bank - Acc. No.</string>
    <string name="change_password_header">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="submit_button">SUBMIT</string>

    <string name="call_for_support">Call for Support</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_transaction_">Transaction_Activity</string>

    <string name="vehicle_text">Vehicle -  </string>
    <string name="main_balance_text">Main Balance\n₹</string>
    <string name="reward_points_text">Reward Points\n₹</string>
    <string name="balance_text">Balance -  ₹</string>
    <string name="card_balance_text">Card Balance - ₹</string>
    <string name="from_date">FROM</string>
    <string name="_date">TO</string>
    <string name="filter">FILTER</string>
    <string name="all">ALL</string>
    <string name="paid">PAID</string>
    <string name="recharged">RECHARGED</string>
    <string name="the_transactions_list_is_empty">The transactions list is empty.</string>
    <string name="no_cards">Contact support team to add new cards.</string>
    <string name="reward_points">Reward Points</string>
    <string name="discount_list_empty">The discount list is empty</string>
</resources>
