<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="320dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/change_password_header"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/current_password"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:theme="@style/AppTheme"
        app:backgroundTint="@color/appThemeBlue"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:theme="@style/AppTheme"
        app:backgroundTint="@color/appThemeBlue"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:theme="@style/AppTheme"
        app:backgroundTint="@color/appThemeBlue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/password_close_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/close"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/password_save_button"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/mybutton"
            android:clickable="true"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>