<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/recharge_request"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/card_no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/card_no"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <EditText
        android:id="@+id/card_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="54dp"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/register_vehicle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/registered_vehicle_no"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <EditText
        android:id="@+id/registered_vehicle_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="54dp"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/amount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/amount_to_recharge"
            android:textColor="@android:color/black" />


    </LinearLayout>

    <EditText
        android:id="@+id/amount_to_recharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="54dp"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/recharge_close_button"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/close"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            style="?android:attr/borderlessButtonStyle"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/recharge_save_button"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/mybutton"
            android:clickable="true"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>