<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <include layout="@layout/my_toolbar" />

    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="56dp"
    android:background="@android:color/darker_gray"/>

    <ProgressBar
        android:id="@+id/main_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"/>

    <android.support.v7.widget.GridLayout
        android:id="@+id/main_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginTop="72dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        app:columnCount="3"
        app:rowCount="2">

        <ImageView
            android:id="@+id/recharge_request_icon"
            android:src="@drawable/recharge_request"
            android:tint="@color/appThemeBlue"
            android:onClick="openCardView"
            app:layout_columnWeight="1" />

        <ImageView
            android:id="@+id/payments_icon"
            android:src="@drawable/payments"
            android:tint="@color/appThemeBlue"
            android:onClick="openUserTransactionView"
            app:layout_columnWeight="1" />

        <ImageView
            android:id="@+id/cards_icon"
            android:onClick="openCardView"
            android:src="@drawable/cards"
            android:tint="@color/appThemeBlue"
            app:layout_columnWeight="1" />

        <TextView
            android:fontFamily="sans-serif-light"
            android:text="@string/recharge_request"
            android:textSize="14sp"
            app:layout_gravity="center_horizontal" />

        <TextView
            android:fontFamily="sans-serif-light"
            android:text="@string/payments"
            android:textSize="14sp"
            app:layout_gravity="center_horizontal" />

        <TextView
            android:fontFamily="sans-serif-light"
            android:text="@string/cards"
            android:textSize="14sp"
            app:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/cards_usage_icon"
            android:layout_marginTop="80dp"
            android:src="@drawable/cards_usage"
            android:tint="@color/appThemeBlue"
            android:onClick="openCardView"
            app:layout_columnWeight="1" />

        <ImageView
            android:id="@+id/latest_transaction_icon"
            android:layout_marginTop="80dp"
            android:src="@drawable/latest_recharge"
            android:tint="@color/appThemeBlue"
            app:layout_columnWeight="1"
            android:onClick="openTransactionView"/>

        <ImageView
            android:id="@+id/discount_transaction_icon"
            android:layout_marginTop="80dp"
            android:src="@drawable/discount"
            android:tint="@color/appThemeBlue"
            app:layout_columnWeight="1"
            android:onClick="openDiscountView"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:text="@string/cards_usage"
            android:textSize="14sp"
            app:layout_gravity="center_horizontal" />

        <TextView
            android:fontFamily="sans-serif-light"
            android:text="@string/latest_transaction"
            android:textSize="14sp"
            app:layout_gravity="center_horizontal" />

        <TextView
            android:fontFamily="sans-serif-light"
            android:text="@string/reward_points"
            android:textSize="14sp"
            app:layout_gravity="center_horizontal" />

    </android.support.v7.widget.GridLayout>

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="@color/appThemeBlue"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/main_balance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reward_points"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
