<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="390dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/payment_record"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/amount"
            app:backgroundTint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/amount"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/payment_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="72dp"
        android:inputType="number"
        android:theme="@style/MyTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/amount"
            app:backgroundTint="@android:color/white" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/payment_mode"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            app:backgroundTint="@color/appThemeBlue"
            android:entries="@array/spinnerItems"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/amount"
            app:backgroundTint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/description"
            android:textColor="@android:color/black" />


    </LinearLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/payment_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="72dp"
        android:inputType="text"
        android:theme="@style/MyTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/payment_close_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/close"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/payment_save_button"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/mybutton"
            android:clickable="true"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>