<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <include layout="@layout/my_toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/from_discount_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/from_date"
                android:theme="@style/AppTheme"
                app:backgroundTint="@color/appThemeBlue" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/to_discount_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/_date"
                android:theme="@style/AppTheme"
                app:backgroundTint="@color/appThemeBlue" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discount_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clipToPadding="false"
            app:layoutManager="LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".activities.DiscountActivity"
            tools:listitem="@layout/transaction_item" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/discount_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/no_discount_trans_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/discount_list_empty"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone"/>
</FrameLayout>
